ocgaparser/ocgaParser.py
# Generated from ocga.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ocgaParser ( Parser ):

    grammarFileName = "ocga.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'geometry'", "'rule'", "'ocga'", "'tag'", 
                     "'roof_colour'", "'roof_material'", "'colour'", "'material'", 
                     "'align_scope'", "'outer_rectangle'", "'massModel'", 
                     "'scale'", "'translate'", "'split_z'", "'split_x'", 
                     "'split_y'", "'primitive_cylinder'", "'create_roof'", 
                     "'comp_border'", "'restore'", "'nil'", "'nope'", "<INVALID>", 
                     "<INVALID>", "'''", "'~'", "':'", "','", "'|'", "'{'", 
                     "'}'", "'('", "')'", "'+'", "'-'", "'*'", "'/'", "<INVALID>", 
                     "<INVALID>", "' '", "'\\t'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "RULE", "OCGA", "TAG", "ROOFCOLOUR", 
                      "ROOFMATERIAL", "COLOUR", "MATERIAL", "ALIGNSCOPE", 
                      "OUTERRECTANGLE", "MASSMODEL", "SCALE", "TRANSLATE", 
                      "SPLIT_Z", "SPLIT_X", "SPLIT_Y", "PRIMITIVECYLINDER", 
                      "ROOF", "COMPBORDER", "RESTORE", "NIL", "NOPE", "NUMBER", 
                      "LITERAL", "RELATIVE_MARK", "APPROX_MARK", "COLUMN", 
                      "COMMA", "PIPE", "LCURLY", "RCURLY", "LPAREN", "RPAREN", 
                      "PLUS", "MINUS", "MULT", "DIV", "COMMENT", "NEWLINE", 
                      "WS", "TAB" ]

    RULE_prog = 0
    RULE_ocga_header = 1
    RULE_rule = 2
    RULE_rule_header = 3
    RULE_operator = 4
    RULE_split_pattern = 5
    RULE_split_pattern_element = 6
    RULE_split_selector = 7
    RULE_expr = 8
    RULE_relative_number = 9
    RULE_simple_expr = 10
    RULE_rule_name = 11
    RULE_roof_shape = 12
    RULE_key_name = 13
    RULE_tag_value = 14

    ruleNames =  [ "prog", "ocga_header", "rule", "rule_header", "operator", 
                   "split_pattern", "split_pattern_element", "split_selector", 
                   "expr", "relative_number", "simple_expr", "rule_name", 
                   "roof_shape", "key_name", "tag_value" ]

    EOF = Token.EOF
    T__0=1
    RULE=2
    OCGA=3
    TAG=4
    ROOFCOLOUR=5
    ROOFMATERIAL=6
    COLOUR=7
    MATERIAL=8
    ALIGNSCOPE=9
    OUTERRECTANGLE=10
    MASSMODEL=11
    SCALE=12
    TRANSLATE=13
    SPLIT_Z=14
    SPLIT_X=15
    SPLIT_Y=16
    PRIMITIVECYLINDER=17
    ROOF=18
    COMPBORDER=19
    RESTORE=20
    NIL=21
    NOPE=22
    NUMBER=23
    LITERAL=24
    RELATIVE_MARK=25
    APPROX_MARK=26
    COLUMN=27
    COMMA=28
    PIPE=29
    LCURLY=30
    RCURLY=31
    LPAREN=32
    RPAREN=33
    PLUS=34
    MINUS=35
    MULT=36
    DIV=37
    COMMENT=38
    NEWLINE=39
    WS=40
    TAB=41

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ocga_header(self):
            return self.getTypedRuleContext(ocgaParser.Ocga_headerContext,0)


        def EOF(self):
            return self.getToken(ocgaParser.EOF, 0)

        def rule_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ocgaParser.RuleContext)
            else:
                return self.getTypedRuleContext(ocgaParser.RuleContext,i)


        def getRuleIndex(self):
            return ocgaParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)




    def prog(self):

        localctx = ocgaParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 30
            self.ocga_header()
            self.state = 32 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 31
                self.rule_()
                self.state = 34 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==2):
                    break

            self.state = 36
            self.match(ocgaParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Ocga_headerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OCGA(self):
            return self.getToken(ocgaParser.OCGA, 0)

        def NUMBER(self):
            return self.getToken(ocgaParser.NUMBER, 0)

        def getRuleIndex(self):
            return ocgaParser.RULE_ocga_header

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOcga_header" ):
                listener.enterOcga_header(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOcga_header" ):
                listener.exitOcga_header(self)




    def ocga_header(self):

        localctx = ocgaParser.Ocga_headerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_ocga_header)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 38
            self.match(ocgaParser.OCGA)
            self.state = 39
            self.match(ocgaParser.NUMBER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RuleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def rule_header(self):
            return self.getTypedRuleContext(ocgaParser.Rule_headerContext,0)


        def operator(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ocgaParser.OperatorContext)
            else:
                return self.getTypedRuleContext(ocgaParser.OperatorContext,i)


        def getRuleIndex(self):
            return ocgaParser.RULE_rule

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRule" ):
                listener.enterRule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRule" ):
                listener.exitRule(self)




    def rule_(self):

        localctx = ocgaParser.RuleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_rule)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self.rule_header()
            self.state = 43 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 42
                self.operator()
                self.state = 45 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 8388592) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Rule_headerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RULE(self):
            return self.getToken(ocgaParser.RULE, 0)

        def rule_name(self):
            return self.getTypedRuleContext(ocgaParser.Rule_nameContext,0)


        def COLUMN(self):
            return self.getToken(ocgaParser.COLUMN, 0)

        def getRuleIndex(self):
            return ocgaParser.RULE_rule_header

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRule_header" ):
                listener.enterRule_header(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRule_header" ):
                listener.exitRule_header(self)




    def rule_header(self):

        localctx = ocgaParser.Rule_headerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_rule_header)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47
            self.match(ocgaParser.RULE)
            self.state = 48
            self.rule_name()
            self.state = 49
            self.match(ocgaParser.COLUMN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OperatorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ALIGNSCOPE(self):
            return self.getToken(ocgaParser.ALIGNSCOPE, 0)

        def TAG(self):
            return self.getToken(ocgaParser.TAG, 0)

        def key_name(self):
            return self.getTypedRuleContext(ocgaParser.Key_nameContext,0)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(ocgaParser.COMMA)
            else:
                return self.getToken(ocgaParser.COMMA, i)

        def tag_value(self):
            return self.getTypedRuleContext(ocgaParser.Tag_valueContext,0)


        def ROOFCOLOUR(self):
            return self.getToken(ocgaParser.ROOFCOLOUR, 0)

        def ROOFMATERIAL(self):
            return self.getToken(ocgaParser.ROOFMATERIAL, 0)

        def COLOUR(self):
            return self.getToken(ocgaParser.COLOUR, 0)

        def MATERIAL(self):
            return self.getToken(ocgaParser.MATERIAL, 0)

        def OUTERRECTANGLE(self):
            return self.getToken(ocgaParser.OUTERRECTANGLE, 0)

        def rule_name(self):
            return self.getTypedRuleContext(ocgaParser.Rule_nameContext,0)


        def MASSMODEL(self):
            return self.getToken(ocgaParser.MASSMODEL, 0)

        def SCALE(self):
            return self.getToken(ocgaParser.SCALE, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ocgaParser.ExprContext)
            else:
                return self.getTypedRuleContext(ocgaParser.ExprContext,i)


        def TRANSLATE(self):
            return self.getToken(ocgaParser.TRANSLATE, 0)

        def SPLIT_X(self):
            return self.getToken(ocgaParser.SPLIT_X, 0)

        def split_pattern(self):
            return self.getTypedRuleContext(ocgaParser.Split_patternContext,0)


        def SPLIT_Y(self):
            return self.getToken(ocgaParser.SPLIT_Y, 0)

        def SPLIT_Z(self):
            return self.getToken(ocgaParser.SPLIT_Z, 0)

        def PRIMITIVECYLINDER(self):
            return self.getToken(ocgaParser.PRIMITIVECYLINDER, 0)

        def ROOF(self):
            return self.getToken(ocgaParser.ROOF, 0)

        def roof_shape(self):
            return self.getTypedRuleContext(ocgaParser.Roof_shapeContext,0)


        def COMPBORDER(self):
            return self.getToken(ocgaParser.COMPBORDER, 0)

        def RESTORE(self):
            return self.getToken(ocgaParser.RESTORE, 0)

        def NIL(self):
            return self.getToken(ocgaParser.NIL, 0)

        def NOPE(self):
            return self.getToken(ocgaParser.NOPE, 0)

        def getRuleIndex(self):
            return ocgaParser.RULE_operator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOperator" ):
                listener.enterOperator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOperator" ):
                listener.exitOperator(self)




    def operator(self):

        localctx = ocgaParser.OperatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_operator)
        try:
            self.state = 120
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 51
                self.match(ocgaParser.ALIGNSCOPE)
                self.state = 52
                self.match(ocgaParser.T__0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 53
                self.match(ocgaParser.TAG)
                self.state = 54
                self.key_name()
                self.state = 55
                self.match(ocgaParser.COMMA)
                self.state = 56
                self.tag_value()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 58
                self.match(ocgaParser.ROOFCOLOUR)
                self.state = 59
                self.tag_value()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 60
                self.match(ocgaParser.ROOFMATERIAL)
                self.state = 61
                self.tag_value()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 62
                self.match(ocgaParser.COLOUR)
                self.state = 63
                self.tag_value()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 64
                self.match(ocgaParser.MATERIAL)
                self.state = 65
                self.tag_value()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 66
                self.match(ocgaParser.OUTERRECTANGLE)
                self.state = 67
                self.rule_name()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 68
                self.match(ocgaParser.MASSMODEL)
                self.state = 69
                self.rule_name()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 70
                self.match(ocgaParser.SCALE)
                self.state = 71
                self.expr(0)
                self.state = 72
                self.match(ocgaParser.COMMA)
                self.state = 73
                self.expr(0)
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 75
                self.match(ocgaParser.SCALE)
                self.state = 76
                self.expr(0)
                self.state = 77
                self.match(ocgaParser.COMMA)
                self.state = 78
                self.expr(0)
                self.state = 79
                self.match(ocgaParser.COMMA)
                self.state = 80
                self.expr(0)
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 82
                self.match(ocgaParser.TRANSLATE)
                self.state = 83
                self.expr(0)
                self.state = 84
                self.match(ocgaParser.COMMA)
                self.state = 85
                self.expr(0)
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 87
                self.match(ocgaParser.TRANSLATE)
                self.state = 88
                self.expr(0)
                self.state = 89
                self.match(ocgaParser.COMMA)
                self.state = 90
                self.expr(0)
                self.state = 91
                self.match(ocgaParser.COMMA)
                self.state = 92
                self.expr(0)
                pass

            elif la_ == 13:
                self.enterOuterAlt(localctx, 13)
                self.state = 94
                self.match(ocgaParser.SPLIT_X)
                self.state = 95
                self.split_pattern()
                pass

            elif la_ == 14:
                self.enterOuterAlt(localctx, 14)
                self.state = 96
                self.match(ocgaParser.SPLIT_Y)
                self.state = 97
                self.split_pattern()
                pass

            elif la_ == 15:
                self.enterOuterAlt(localctx, 15)
                self.state = 98
                self.match(ocgaParser.SPLIT_Z)
                self.state = 99
                self.split_pattern()
                pass

            elif la_ == 16:
                self.enterOuterAlt(localctx, 16)
                self.state = 100
                self.match(ocgaParser.PRIMITIVECYLINDER)
                self.state = 101
                self.expr(0)
                pass

            elif la_ == 17:
                self.enterOuterAlt(localctx, 17)
                self.state = 102
                self.match(ocgaParser.PRIMITIVECYLINDER)
                self.state = 103
                self.expr(0)
                self.state = 104
                self.match(ocgaParser.COMMA)
                self.state = 105
                self.expr(0)
                pass

            elif la_ == 18:
                self.enterOuterAlt(localctx, 18)
                self.state = 107
                self.match(ocgaParser.ROOF)
                self.state = 108
                self.roof_shape()
                self.state = 109
                self.match(ocgaParser.COMMA)
                self.state = 110
                self.expr(0)
                pass

            elif la_ == 19:
                self.enterOuterAlt(localctx, 19)
                self.state = 112
                self.match(ocgaParser.COMPBORDER)
                self.state = 113
                self.expr(0)
                self.state = 114
                self.match(ocgaParser.COMMA)
                self.state = 115
                self.rule_name()
                pass

            elif la_ == 20:
                self.enterOuterAlt(localctx, 20)
                self.state = 117
                self.match(ocgaParser.RESTORE)
                pass

            elif la_ == 21:
                self.enterOuterAlt(localctx, 21)
                self.state = 118
                self.match(ocgaParser.NIL)
                pass

            elif la_ == 22:
                self.enterOuterAlt(localctx, 22)
                self.state = 119
                self.match(ocgaParser.NOPE)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Split_patternContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def split_pattern_element(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ocgaParser.Split_pattern_elementContext)
            else:
                return self.getTypedRuleContext(ocgaParser.Split_pattern_elementContext,i)


        def PIPE(self, i:int=None):
            if i is None:
                return self.getTokens(ocgaParser.PIPE)
            else:
                return self.getToken(ocgaParser.PIPE, i)

        def getRuleIndex(self):
            return ocgaParser.RULE_split_pattern

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSplit_pattern" ):
                listener.enterSplit_pattern(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSplit_pattern" ):
                listener.exitSplit_pattern(self)




    def split_pattern(self):

        localctx = ocgaParser.Split_patternContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_split_pattern)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.split_pattern_element()
            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==29:
                self.state = 123
                self.match(ocgaParser.PIPE)
                self.state = 124
                self.split_pattern_element()
                self.state = 129
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Split_pattern_elementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ocgaParser.RULE_split_pattern_element

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Simple_split_patternContext(Split_pattern_elementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ocgaParser.Split_pattern_elementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def split_selector(self):
            return self.getTypedRuleContext(ocgaParser.Split_selectorContext,0)

        def COLUMN(self):
            return self.getToken(ocgaParser.COLUMN, 0)
        def rule_name(self):
            return self.getTypedRuleContext(ocgaParser.Rule_nameContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSimple_split_pattern" ):
                listener.enterSimple_split_pattern(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSimple_split_pattern" ):
                listener.exitSimple_split_pattern(self)


    class Repeat_split_patternContext(Split_pattern_elementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ocgaParser.Split_pattern_elementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LPAREN(self):
            return self.getToken(ocgaParser.LPAREN, 0)
        def split_pattern(self):
            return self.getTypedRuleContext(ocgaParser.Split_patternContext,0)

        def RPAREN(self):
            return self.getToken(ocgaParser.RPAREN, 0)
        def MULT(self):
            return self.getToken(ocgaParser.MULT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRepeat_split_pattern" ):
                listener.enterRepeat_split_pattern(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRepeat_split_pattern" ):
                listener.exitRepeat_split_pattern(self)



    def split_pattern_element(self):

        localctx = ocgaParser.Split_pattern_elementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_split_pattern_element)
        try:
            self.state = 139
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [23, 26]:
                localctx = ocgaParser.Simple_split_patternContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 130
                self.split_selector()
                self.state = 131
                self.match(ocgaParser.COLUMN)
                self.state = 132
                self.rule_name()
                pass
            elif token in [32]:
                localctx = ocgaParser.Repeat_split_patternContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 134
                self.match(ocgaParser.LPAREN)
                self.state = 135
                self.split_pattern()
                self.state = 136
                self.match(ocgaParser.RPAREN)
                self.state = 137
                self.match(ocgaParser.MULT)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Split_selectorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(ocgaParser.NUMBER, 0)

        def APPROX_MARK(self):
            return self.getToken(ocgaParser.APPROX_MARK, 0)

        def getRuleIndex(self):
            return ocgaParser.RULE_split_selector

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSplit_selector" ):
                listener.enterSplit_selector(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSplit_selector" ):
                listener.exitSplit_selector(self)




    def split_selector(self):

        localctx = ocgaParser.Split_selectorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_split_selector)
        try:
            self.state = 144
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [23]:
                self.enterOuterAlt(localctx, 1)
                self.state = 141
                self.match(ocgaParser.NUMBER)
                pass
            elif token in [26]:
                self.enterOuterAlt(localctx, 2)
                self.state = 142
                self.match(ocgaParser.APPROX_MARK)
                self.state = 143
                self.match(ocgaParser.NUMBER)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def relative_number(self):
            return self.getTypedRuleContext(ocgaParser.Relative_numberContext,0)


        def simple_expr(self):
            return self.getTypedRuleContext(ocgaParser.Simple_exprContext,0)


        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ocgaParser.ExprContext)
            else:
                return self.getTypedRuleContext(ocgaParser.ExprContext,i)


        def MULT(self):
            return self.getToken(ocgaParser.MULT, 0)

        def DIV(self):
            return self.getToken(ocgaParser.DIV, 0)

        def PLUS(self):
            return self.getToken(ocgaParser.PLUS, 0)

        def MINUS(self):
            return self.getToken(ocgaParser.MINUS, 0)

        def getRuleIndex(self):
            return ocgaParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = ocgaParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 16
        self.enterRecursionRule(localctx, 16, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [25]:
                self.state = 147
                self.relative_number()
                pass
            elif token in [23, 24, 32]:
                self.state = 148
                self.simple_expr()
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 159
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 157
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
                    if la_ == 1:
                        localctx = ocgaParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 151
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 152
                        _la = self._input.LA(1)
                        if not(_la==36 or _la==37):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 153
                        self.expr(3)
                        pass

                    elif la_ == 2:
                        localctx = ocgaParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 154
                        if not self.precpred(self._ctx, 1):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                        self.state = 155
                        _la = self._input.LA(1)
                        if not(_la==34 or _la==35):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 156
                        self.expr(2)
                        pass

             
                self.state = 161
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Relative_numberContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RELATIVE_MARK(self):
            return self.getToken(ocgaParser.RELATIVE_MARK, 0)

        def NUMBER(self):
            return self.getToken(ocgaParser.NUMBER, 0)

        def getRuleIndex(self):
            return ocgaParser.RULE_relative_number

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRelative_number" ):
                listener.enterRelative_number(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRelative_number" ):
                listener.exitRelative_number(self)




    def relative_number(self):

        localctx = ocgaParser.Relative_numberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_relative_number)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            self.match(ocgaParser.RELATIVE_MARK)
            self.state = 163
            self.match(ocgaParser.NUMBER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Simple_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
